--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Weather</title>
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
